--- a/Blog/templates/blog/allblogs.html
+++ b/Blog/templates/blog/allblogs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <title>PRANAV AHUJA</title>
+    <title>My Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -28,7 +28,7 @@
                       <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link" href="https://www.instagram.com/my_shutter.world/">Instagram</a>
                         <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
-                        <a class="nav-item nav-link" href='/blog'>Blog</a>
+                        <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
                         
                       </div>
                     </div>
@@ -37,37 +37,27 @@
 
     <main role="main">
 
-      <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Hi I'm Pranav</h1>
-          <p class="lead text-muted">My Name is Pranav Ahuja</p>
-          <p>
-            <a href="mailto:pranav.ahuja3@gmail.com" class="btn btn-primary my-2">Contact</a>
-          </p>
-          <img src="{% static 'pranav.jpg' %}" height="300"/>
+          <h1 class="text-center pt-3">Welcome to my blog</h1>
+          <br/>
+          <br/>
+          <h2>Latest Posts</h2>
+          <hr/>
+          {% for blog in blogs.all %}
+          <a href="{% url 'detail' blog.id %}"><h3>{{blog.title}}</h3></a>
+          <br/>
+          {{blog.pub_date_pretty}}
+          <br/>
+          <img class="img fluid" src="{{blog.image.url}}" height=200 width=200/>
+          <br/>
+          <br/>
+          <p>{{blog.summary}}</p>
+          {% endfor %}
+        
         </div>
-      </section>
+      
 
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-            {% for job in jobs.all %}  
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" src="{{job.image.url}}"/>
-                <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
-                    
-                  </div>
-                </div>
-              </div>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      </div>
-
+      
     </main>
 
     <footer class="text-muted">
